# stroke_prediction_jjb_20251124

./: .gitignore  CLAUDE.md  QUICKSTART.md  README.md  activate_venv.bat  activate_venv.ps1  check_venv.ps1  convert_md_to_docx.py  pyproject.toml  requirements.txt  run_full_pipeline.py
.claude/: settings.local.json
analysis_01_preprocess/data/final/: feature_names.txt  stroke_preprocessed.csv
analysis_01_preprocess/scripts/: 01_data_preprocessing.py
analysis_02_eda/scripts/: 01_eda_analysis.py
analysis_03_model/scripts/baseline/: 01_train_models.py
analysis_03_model/scripts/evaluation/: 02_shap_analysis.py  03_additional_evaluation.py
paper/: main_paper.md
paper/sections/: 01_background.md  02_methods.md  03_results.docx  03_results.md  04_conclusions.md
utils/: config.py
